# shm-bearing-dataset

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  ROADMAP.md  pyproject.toml  pytest.ini  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
app/: dashboard.py
artifacts/models/: config_snapshot.yaml  manifest.json
artifacts/reports/: ablation_results.json  evaluation_metrics.json  evaluation_report.md  train_results.json
configs/: config.yaml
data/: README.md
data/raw/: README.txt
docs/: ARCHITECTURE.md  ENGINEERING_AUDIT.md  OPEN_SOURCE_BENCHMARKS.md  README.md  ROADMAP.md
experiments/: __init__.py  ablation.py  evaluate.py  predict.py  train.py
pipelines/: __init__.py  ablation.py  evaluate.py  predict.py  train.py
shm/: __init__.py  cli.py
src/: contracts.py
src/agent/: __init__.py  decision_agent.py  schemas.py
src/api/: main.py  model_store.py  schemas.py
src/data/: __init__.py  loader.py  preprocessor.py
src/features/: extractor.py
src/inference/: __init__.py  cache.py  pipeline.py
src/models/: __init__.py  anomaly.py  base.py  cnn1d.py  random_forest.py
src/utils/: __init__.py  config.py  logger.py  metrics.py  paths.py  seed.py
tests/: conftest.py  test_agent.py  test_api.py  test_cache.py  test_config.py  test_data.py  test_features.py  test_inference.py  test_models.py
